# Computer_Science_Exercise

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  run.sh
config/: drone_parameters.json
include/: CMakeLists.txt  constants.h  droneDataStructs.h
include/utility/: utility.c  utility.h
include/wrappers/: wrappers.c  wrappers.h
src/: CMakeLists.txt  drone.c  input.c  map.c  master.c  obstacle.c  server.c  target.c  watchdog.c
